<resources>
    <string name="app_name">InventoryApp</string>

    <string name="enter_data">Click on the button to enter the placeholder data</string>
    
    <!--add title for menu add action-->
    <string name="add_action">Add a book</string>

    <!--delete all books title for menu-->
    <string name="delete_all_books_action">Delete All Books</string>

    <!--insert placeholder book title for action menu-->
    <string name="insert_placeholder_book_action">Insert PLACEHOLDER</string>

    <!--save the book in the add menu-->
    <string name="save_book_action">Save</string>

    <!--delete the book in the add menu-->
    <string name="delete_book_action">Delete</string>

    <!--Book name field in the add activity-->
    <string name="add_book_name">Book Name</string>

    <!--name hint editor-->
    <string name="name_hint">Name</string>

    <!--phone number hint editor-->
    <string name="number_hint">Phone Number</string>

    <!--Book price field in the add activity-->
    <string name="add_price">Price: </string>

    <!--book price hint editor-->
    <string name="price_hint">Price</string>

    <!--Book quantity field in the add activity-->
    <string name="add_quantity">Quantity: </string>

    <!--book quantity hint editor-->
    <string name="quantity_hint">Quantity</string>

    <!--supplier info field in the add activity-->
    <string name="supplier_info_field">Supplier Info :-</string>

    <!--quantity placeholder display in the list item-->
    <string name="display_quantity_number">300</string>

    <!--price placeholder display in the list item-->
    <string name="display_price_number">20 $</string>

    <!--the empty view text-->
    <string name="empty_view_text">No Results click the add icon above to add new book</string>

    <!--Delete All books message dialog-->
    <string name="delete_all_dialog">Delete All the Books ?</string>

    <!--Delete the book-->
    <string name="delete_book_dialog">Delete the Book ?</string>

    <!--Delete All positive button-->
    <string name="delete_button_dialog">Delete</string>

    <!--cancel negative button-->
    <string name="cancel_button_dialog">Cancel</string>

    <!--Dialog message when user is leaving editor but hasn't saved changes-->
    <string name="unsaved_changes_dialog">Discard your changes and quit editing?</string>

    <!--Dialog button text for the option to discard a user's changes-->
    <string name="discard">Discard</string>

    <!--Dialog button text for the option to keep editing the current pet-->
    <string name="keep_editing">Keep Editing</string>

    the messages on the check of every input
    <string name="all_data_check">You didn\'t enter any data, please complete all the fields</string>
    <string name="book_name_check">You must enter a valid Book name</string>
    <string name="supp_check">You must enter ALL the supplier data</string>
    <string name="quantity_check">You must enter a positive non ZERO quantity</string>
    <string name="price_check">You must enter a positive non ZERO price</string>



</resources>
